--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   image_picker: ^0.6.7+17
   firebase_ml_vision: ^0.9.10
+  fluttertoast: ^7.1.6
 
 dev_dependencies:
   flutter_test:
